mid city portal

--- a/final_project/package.json
+++ b/final_project/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "apple_website":"npx @tailwindcss/cli -i ./static/apple_website/styles/tailwind.css -o  ./static/apple_website/styles/style.css --watch",
+"city_portal":"npx @tailwindcss/cli -i ./static/city_portal/styles/tailwind.css -o ./static/city_portal/styles/style.css --watch",
+"nav_bar":"npx @tailwindcss/cli -i ./static/nav_bar/styles/tailwind.css -o ./static/nav_bar/styles/style.css --watch",
     "colorful_button":"npx @tailwindcss/cli -i ./static/colorful_button/styles/tailwind.css -o ./static/colorful_button/styles/style.css --watch"
   },
   "keywords": [],
